# selene

./: Cargo.toml  README.md
crates/math/: Cargo.toml
crates/math/src/: input.rs  lib.rs  rk4.rs  state.rs  timestep.rs
crates/model/: Cargo.toml
crates/model/src/: aircraft.rs  airframeparams.rs  atmosphere.rs  dynamicmodel.rs  f16.rs  fixedwingparams.rs  lib.rs  model.rs  transport.rs  van_der_pol.rs
crates/model/src/dynamicmodel/: fixedwing3dof.rs  mod.rs
crates/model/src/engine/: engineparams.rs  f100pw220.rs  mod.rs  staticthrust.rs
crates/plots/: Cargo.toml
crates/plots/src/: lib.rs
crates/sim/: Cargo.toml
crates/sim/src/: lib.rs  output.rs  runner.rs
src/: main.rs
src/error/: mod.rs
src/examples/: f16_6dof_coordinated_turn_example.rs  mod.rs  transport_3dof_elevator_doublet_example.rs  transport_3dof_throttle_doublet_example.rs  trim_example.rs  vanderpol_example.rs
src/linearize/: mod.rs
src/math/: input.rs  input_functions.rs  interpolation.rs  mod.rs  state.rs  test_utils.rs
src/model/: aircraft.rs  airframeparams.rs  atmosphere.rs  f16.rs  mod.rs  transport.rs  van_der_pol.rs
src/model/aerodynamics/: f16aero.rs  mod.rs  transportaero.rs
src/model/dynamicmodel/: fixedwing3dof.rs  fixedwing6dof.rs  mod.rs  state2.rs
src/model/engine/: f100pw220.rs  mod.rs  staticthrust.rs
src/plots/: mod.rs
src/sim/: mod.rs  output.rs  rk4.rs  simulator.rs
src/trim/: mod.rs
