[package]
name = "selene"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/model",
    "crates/sim",
    "crates/math",
    "crates/plots",
]

[dependencies]
nalgebra = "0.35.0"
math = { path = "crates/math" }
sim = { path = "crates/sim" }
plots = { path = "crates/plots" }
model = { path = "crates/model" }
